--- a/android/MobiTrack/app/src/main/AndroidManifest.xml
+++ b/android/MobiTrack/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.mobitrack">
+    package="com.example.mobi2">
 
     <application
         android:allowBackup="true"
